--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,9 @@ h2 {
     margin-top: 0;
   }
 }
+.hide {
+  display: none;
+}
 figure {
   margin: 0;
 }
@@ -184,11 +187,15 @@ a {
 /* default info button */
 .info-button-div {
   position: absolute;
-  right: 50px;
+  display: none;
+  right: 80px;
   top: 20px;
-  display: inline-block;
   max-width: 32px;
   max-height: 32px;
+  z-index: 100;
+  &:hover {
+    border: 4px solid white;
+  }
 }
 svg.info-button {
   width: 100%;
@@ -415,7 +422,7 @@ ul.links-horiz {
   list-style-type: none;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   .hide {
     display: none;
   }
@@ -426,6 +433,7 @@ ul.links-horiz {
     overflow: hidden;
     position: relative;
   }
+
   a {
     color: #fff;
     text-decoration: underline;
