--- a/css/main.scss
+++ b/css/main.scss
@@ -996,6 +996,19 @@ footer > div {
 
 /* END OF Text over an images */
 
+#intro {
+  position: relative;
+  .header-hero-text {
+    position: absolute;
+    top: 100px;
+    left: 80px;
+    h1,
+    h2 {
+      color: #fff;
+    }
+  }
+}
+
 .blog-page {
   .grid {
     width: 80%;
