--- a/css/main.scss
+++ b/css/main.scss
@@ -239,6 +239,12 @@ ul.links-horiz {
   background-image: url('../images/heros/wlf-game.png');
 }
 .enchanted-page {
+  footer a {
+    color: #fff;
+  }
+  footer a:hover {
+    text-decoration: none;
+  }
   a {
     color: $ceti-orange;
   }
