updated donations page

--- a/css/main.scss
+++ b/css/main.scss
@@ -1105,6 +1105,10 @@ section.gof div {
 section.gof figure {
   margin: 0;
 }
+section.gof a {
+  color: #fff;
+  text-decoration: underline;
+}
 section.constellations {
   div {
     padding: 60px 0;
