new content for about page

--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,10 @@ h2 {
   margin-top: 0;
   line-height: 1.2em;
 }
+.orange-text {
+  color: $ceti-orange;
+  font-weight: bold;
+}
 .caps {
   text-transform: uppercase;
   margin-bottom: 0;
