fixed link color

--- a/css/main.scss
+++ b/css/main.scss
@@ -1145,6 +1145,9 @@ section.constellations {
   color: $ceti-orange;
 }
 #xrchive-page .light a:hover {
+  color: $ceti-grey;
+}
+#xrchive-page .light a.button:hover {
   color: #fff;
 }
 section.events {
