fixed underline in footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -917,6 +917,7 @@ footer {
   }
   .right a:hover {
     border-bottom: 2px solid #fff;
+    text-decoration: none;
   }
   .inner {
     width: 80%;
