italics and orange for h2s on seed page

--- a/css/main.scss
+++ b/css/main.scss
@@ -1142,6 +1142,12 @@ section.constellations {
     background-color: #fff;
   }
 }
+.seed {
+  h2.title {
+    color: $ceti-orange;
+    font-style: italic;
+  }
+}
 #xrchive-page .light a {
   color: $ceti-orange;
 }
