updated enchated tech text

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,6 +51,10 @@ h2 {
   color: $ceti-orange;
   font-weight: bold;
 }
+h2.orange-text {
+  color: $ceti-orange;
+  font-weight: 400;
+}
 .caps {
   text-transform: uppercase;
   margin-bottom: 0;
@@ -81,7 +85,11 @@ img {
 hr {
   margin: 80px 0;
 }
-
+blockquote {
+  line-height: 1.6em;
+  font-size: 22px;
+  margin-bottom: 120px;
+}
 img.logo {
   width: 120px;
 }
@@ -953,6 +961,9 @@ footer {
   }
 }
 
+.hide-desktop {
+  display: none;
+}
 footer > div {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -1260,6 +1271,14 @@ section.events div.title {
     display: block;
     padding-left: 0;
     padding-right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .enchanted-page .header-hero-text {
+    display: none;
+  }
+  .hide-desktop {
+    display: block;
   }
 }
 /* end video modal */
