--- a/css/main.scss
+++ b/css/main.scss
@@ -128,6 +128,7 @@ a:hover {
     color: white;
   }
 }
+
 .orange-light {
   background-color: $ceti-orange-light;
   color: #fff;
@@ -262,6 +263,9 @@ ul.links-horiz {
   footer a:hover {
     text-decoration: none;
   }
+  .inner {
+    margin-bottom: 80px;
+  }
   a {
     color: $ceti-orange;
   }
@@ -269,7 +273,7 @@ ul.links-horiz {
     text-decoration: underline;
   }
   figure {
-    margin-top: 80px;
+    margin-top: 0;
   }
 }
 .about {
@@ -1043,7 +1047,7 @@ footer > div {
     left: 80px;
     h1,
     h2 {
-      color: #fff;
+      color: $ceti-grey;
     }
   }
 }
